--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "express-session",
-  "version": "1.0.2",
+  "name": "express-token-session",
+  "version": "1.0.0",
   "author": "TJ Holowaychuk <tj@vision-media.ca> (http://tjholowaychuk.com)",
   "main": "./index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/expressjs/session.git"
+    "url": "git://github.com/kleiinnn/token-session.git"
   },
+  "contributors":[
+	  "Markus Klein <m@mklein.co.at> (https://mklein.co.at)"
+  ],
   "dependencies": {
     "utils-merge": "1.0.0",
-    "cookie": "0.1.0",
-    "cookie-signature": "1.0.3",
-    "uid2": "0.0.3",
-    "buffer-crc32": "0.2.1",
-    "debug": "0.7.4"
+    "uid2": "0.0.3"
   },
   "devDependencies": {
     "mocha": "~1.17.0",
     "connect": "2.13.0",
     "supertest": "0.9.0",
-    "should": "3.1.2",
-    "cookie-parser": "1.0.0"
+    "should": "3.1.2"
   },
   "scripts": {
     "test": "mocha --bail --ui bdd --reporter list -- test/*.js"
