--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "mocha": "~1.17.0",
     "connect": "2.13.0",
+    "express": "3.4.8",
     "supertest": "0.9.0",
     "should": "3.1.2"
   },
